--- a/components/room.templ
+++ b/components/room.templ
@@ -1,50 +1,51 @@
 package components
 
+import "fmt"
+
 script gameplay(){
-      const roomId = window.location.pathname;
-      const socket = new WebSocket(`ws://localhost:8080/api${roomId}`);
+//       const roomId = window.location.pathname;
+//       const socket = new WebSocket(`ws://localhost:8080/api${roomId}`);
 
-      const sendMove = (x, y) => {
-        socket.send(JSON.stringify({ x: x, y: y }));
-      };
+//       // const sendMove = (x, y) => {
+//       //   socket.send(JSON.stringify({ x: x, y: y }));
+//       // };
 
-      socket.onmessage = (event) => {
-        const data = JSON.parse(event.data);
-        if (data.type === 0) {
-          // console.log(data.content);
-        } else if ([2, 3].includes(data.type)) {
-          const gameState = JSON.parse(data.content);
-          const board = gameState.board;
-          let boardElem = "";
+//       socket.onmessage = (event) => {
+//         const data = JSON.parse(event.data);
+//         if (data.type === 0) {
+//           // console.log(data.content);
+//         } else if ([2, 3].includes(data.type)) {
+//           const gameState = JSON.parse(data.content);
+//           const board = gameState.board;
+//           let boardElem = "";
 
-          for (let i = 0; i < board.length; i++) {
 
-            boardElem += `
-              <div class="flex items-center justify-center border-2 text-gray-50">
-                <button onclick="sendMove(${i}, ${0})" class="bg-gray-800 w-16 h-16" >${
-                  board[i][0]
-                }</button>
-                <button onclick="sendMove(${i}, ${1})" class="bg-gray-800 w-16 h-16 border-x-2" >${
-                  board[i][1]
-                }</button>
-                <button onclick="sendMove(${i}, ${2})" class="bg-gray-800 w-16 h-16">${
-                  board[i][2]
-                }</button>
-              </div>
-            `;
-          }
-
-          document.getElementById("board").innerHTML = boardElem;
-        }
-        if (data.type === 3) {
-          // game ended
-        }
-        console.log(data);
-      };
+//           document.getElementById("board").innerHTML = @board(board)
+// ;
+//         }
+//         if (data.type === 3) {
+//           // game ended
+//         }
+//         console.log(data);
+//       };
 }
 
-templ Room(){
+templ Board(board [3][3]string) {
+  <div id="board">  
+  for i:= range board {
+    <div class={"flex items-center justify-center text-gray-50", templ.KV("border-2", i!=1), templ.KV("border-x-2", i==1)}>
+    for j, tile := range board[i] {
+      <button ws-send name="move" value={fmt.Sprintf("%d;%d", i, j)} class={"bg-gray-800 w-16 h-16", templ.KV("border-x-2", j==1)} >{ tile }</button>
+    }
+    </div>
+  }
+  </div>
+}
+
+templ Room(roomId string){
     @Layout(gameplay()){
-    <main id="board"></main>
+    <main hx-ext="ws" ws-connect={fmt.Sprintf("/api/%s", roomId)}>
+      <div id="board"></div>
+    </main>
     }
 }
