--- a/components/home.templ
+++ b/components/home.templ
@@ -1,28 +1,25 @@
 package components
 
-script joinRoom(){
-        const code = document.getElementById("roomCode").value 
-        window.location.href = "/" + code
+templ lobby() {
+	<div class="flex items-center justify-center">
+		<form hx-get="/api/join">
+			<input
+				name="roomId"
+				type="text"
+				placeholder="Type room code"
+				class="p-2 text-gray-900"
+				minlength="6"
+				maxlength="6"
+			/>
+			<button type="submit" class="ml-5 p-2 px-6 bg-gray-500 hover:bg-gray-700">Join</button>
+		</form>
+	</div>
+	<p class="font-bold">or</p>
+	<button hx-get="/api/create-room" class="ml-5 p-2 px-6 bg-gray-500 hover:bg-gray-700">Create room</button>
 }
 
-templ lobby(){
-    <div class="flex items-center justify-center">
-      <input
-        id="roomCode"
-        type="text"
-        placeholder="Type room code"
-        class="p-2 text-gray-900"
-        minlength="6"
-        maxlength="6"
-      />
-      <button onclick="handleJoin()" class="ml-5 p-2 px-6 bg-gray-500 hover:bg-gray-700">Join</button>
-    </div>
-    <p class="font-bold">or</p>
-    <button class="ml-5 p-2 px-6 bg-gray-500 hover:bg-gray-700">Create room</button>
-}
-
-templ Home(){
-  @Layout(joinRoom()){
-    @lobby()
-  }
+templ Home() {
+	@Layout() {
+		@lobby()
+	}
 }
